Bug 262132 - [JSC][armv7] Many stress tests produce segfaults; fix DataIC address computations
Summary: [JSC][armv7] Many stress tests produce segfaults; fix DataIC address computat...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-26 11:35 PDT by Joseph Griego
Modified: 2023-09-27 18:15 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joseph Griego 2023-09-26 11:35:41 PDT
See e.g. this EWS run: https://build.webkit.org/#/builders/24/builds/27175
Comment 1 Joseph Griego 2023-09-26 11:41:18 PDT
Pull request: https://github.com/WebKit/WebKit/pull/18239
Comment 2 EWS 2023-09-27 18:14:59 PDT
Committed 268555@main (ec52f0d00cbd): <https://commits.webkit.org/268555@main>

Reviewed commits have been landed. Closing PR #18239 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-09-27 18:15:15 PDT
<rdar://problem/116152740>