[JSC][armv7] Small fixes for DataIC address computations https://bugs.webkit.org/show_bug.cgi?id=262132

Reviewed by Yusuke Suzuki.

Fixes a great deal of the test suite.

`push {r7, lr}` uses 4 bytes, so the prologue size needs to be 6 and not 4.

Also, CodePtr::untaggedPtr produces a pointer suitable for jmp/call targets,
which for thumb code is off by 1--use `dataLocation()` instead for doing pointer
arithmetic--this change should affect nothing on other architectures.

* Source/JavaScriptCore/bytecode/InlineCacheCompiler.cpp:
(JSC::InlineCacheCompiler::regenerate):

Canonical link: https://commits.webkit.org/268555@main